Only set X11 selection on mouse release

Since the beginning of time, konsole has been setting the X11 selection
on mouse release, on double click, and on triple click.  This results in
intermediate entries being created on klipper, e.g. for double click you
get the initial word, and the final selection when you eventually
release the mouse button.

Note we still will get an intermediate entry on triple click (double
click release), but we still prevent one intermediate entry (triple
click entry) on that case.

BUG: 462338